added alert and href for the button

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <div class="absolute bottom-0  bg-white w-screen py-4 px-2 flex justify-end md:bg-transparent md:w-1/4 md:right-12">
     <button type="submit" class="bg-MarineBlue text-white p-2 rounded-md hover:bg-PurplishBlue">
-      <a href="./selectplan.html">Next Step</a>
+      <a href="">Next Step</a>
     </button>
   </div>
 
